--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ ispring.application.name=Conexion_24
 
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/Conexion24BD
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=root
 
 
 server.port=8084
