--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/Conexion24BD
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://dpg-comrsr0cmk4c739qj4rg-a.oregon-postgres.render.com/conexion24bd
+spring.datasource.username=grupo3
+spring.datasource.password=KoVCsoTYnBlIwfUlTZaL3pRgiQwGekqR
 
 
 server.port=8084
