--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-ispring.application.name=Conexion_24
+ispring.application.name=Conexion24
 
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
